[package]
name = "rpr"
version = "0.3.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "A utility to record ETW traces."
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
clap = { version = "4.2.4", features = ["derive"] }
wildmatch = "2.1.1"

[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
]
