[package]
name = "rpr"
version = "0.3.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "A utility to record ETW traces."
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
clap = { version = "4.5.35", features = ["derive"] }
wildmatch = "2.4.0"

[dependencies.windows]
version = "0.61.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
]
